<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:layout_margin="16dp">
        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:paddingBottom="16dp"
            android:inputType="textCapWords"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#4527A0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppings"
            style="@style/CustomText"
            android:layout_marginBottom="16dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/whipped_cream_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whipped_cream"
                android:paddingStart="24dp"
                tools:ignore="RtlSymmetry"
                style="@style/CustomTextCheckbox"/>
            <CheckBox
                android:id="@+id/chocolate_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chocolate"
                android:paddingStart="24dp"
                tools:ignore="RtlSymmetry"
                style="@style/CustomTextCheckbox"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            style="@style/CustomText"
            android:layout_marginTop="16dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/decrement"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/minus_button"
                android:layout_marginTop="16dp"
                android:onClick="decrement"
                style="@style/CustomTextSmall"
                android:background="@color/colorButton"/>
            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numbers"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                style="@style/CustomText"/>
            <Button
                android:id="@+id/increment"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/plus_button"
                android:layout_marginTop="16dp"
                android:onClick="increment"
                style="@style/CustomTextSmall"
                android:background="@color/colorButton"/>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:layout_marginTop="26dp"
            android:onClick="submitOrder"
            style="@style/CustomTextSmall"
            android:background="@color/colorButton" />

    </LinearLayout>

</ScrollView>
